[package]
name = "md-image-downloader"
version = "0.1.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
reqwest = { version = "0.10.8", features = ["blocking"] }
